<resources>
    <string name="app_name">My Application</string>

    <!-- ui.login package -->
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>

    <!-- ui.main package -->
    <string name="hello">Hello World</string>

    <!-- ui.score package -->
    <string name="reset">RESET</string>
    <string name="_3_points">+3 Points</string>
    <string name="_2_points">+2 Points</string>
    <string name="free_throw">Free Throw</string>
    <string name="initialScore">0</string>
    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <!-- ui.score.fragments package -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resetDialog">Are you sure you want to reset the scores?</string>
    <string name="resetDialogConfirmReset">YES</string>
    <string name="resetDialogCancelReset">NO</string>
    <string name="add">Add</string>
    <string name="to_do_list">To-Do List</string>
    <string name="addTodoHint">eg. buy eggs, sweep, etc.</string>
    <string name="choose">Choose Button Visibility</string>

    <!--ui.wordbank package-->
    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add_word">Add word</string>
</resources>