<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.myapplication.ui.score.ScoreViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="538dp">

            <LinearLayout
                android:id="@+id/teamALayout"
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/teamA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teamA"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/teamAScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="60sp"
                    app:score_team_a="@{viewModel.scoreTeamA}" />

                <Button
                    android:id="@+id/plus3AButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_3_points" />

                <Button
                    android:id="@+id/plus2AButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_points" />

                <Button
                    android:id="@+id/freeThrowAButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/free_throw" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/teamBLayout"
                android:layout_width="209dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/teamB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teamB"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/teamBScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/initialScore"
                    android:textAlignment="center"
                    android:textSize="60sp" />

                <Button
                    android:id="@+id/plus3BButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_3_points" />

                <Button
                    android:id="@+id/plus2BButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_points" />

                <Button
                    android:id="@+id/freeThrowBButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/free_throw" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/reset" />
    </LinearLayout>
</layout>